# FuturesModelFactory

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
configs/: futures_smoke.yaml
docs/adr/: 0001-factor-evaluator-pipeline.md  0002-clickhouse-schema-and-partitioning.md
registry/factors/: factor_volume_momentum.yaml
scripts/: import_futures_1m.py
src/futures_model_factory/: __init__.py  pipeline.py
src/futures_model_factory/diagnostics/: buckets.py  drift.py  ic.py  ic_decay.py  monotonicity.py  redundancy.py
src/futures_model_factory/registry/: factor_cards.py  subsystem_cards.py
src/futures_model_factory/utils/: provenance.py  schema.py
tests/: conftest.py  test_diagnostics.py  test_pipeline.py  test_registry.py
